--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
-        android:name=".MyApplication"
+        android:name=".application.MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,13 +14,7 @@
         android:theme="@style/Theme.HiltRoomDatabase"
         tools:targetApi="31">
         <activity
-            android:name=".core_presentation.ui.UpdateActivity"
-            android:exported="false" />
-        <activity
-            android:name=".core_presentation.ui.AddActivity"
-            android:exported="false" />
-        <activity
-            android:name=".core_presentation.ui.activities.MainActivity"
+            android:name=".core_presentation.ui.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
