--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <application
         android:name=".application.MyApplication"
         android:allowBackup="true"
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.HiltRoomDatabase"
         tools:targetApi="31">
         <activity
-            android:name=".core_presentation.ui.MainActivity"
+            android:name=".core_presentation.ui.activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
